Refs #10437: Prevent horizontal overflow scrolling for the document.

--- a/boots_grid/css/base.less
+++ b/boots_grid/css/base.less
@@ -1,5 +1,8 @@
-// Fixes height/positioning issues with overlay
+html, body {
+  overflow-x: hidden;
+}
 
+// Fixes height/positioning issues with overlay
 body {
   position: relative;
 }
